Sun Dec  5 18:09:36 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add manpages from Josip Rodin <joy@cibalia.gkvk.hr> for
    cleanup-info and dpkg-divert
  * New dpkg-scansources from Roderick to allow trailing blanks on lines
  * Correct generation of manual-version
  * Merge patch from Richard Kettlewell <rjk@sfere.greenend.org.uk> to
    eliminate string copies while reading .list files
  * Fix earlier translation-patch for dselect so it builds again

Sat Dec  4 04:22:49 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Update the polish translation

Mon Nov 29 21:11:35 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Change default lispdir to $(prefix)/emacs/site-lisp/$PACKAGE

Sun Nov 28 21:56:32 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * dselect/pkgdepcon.cc: don't treat recommends like (pre-)depends.
    Instead make it similar to suggests but default to selecting the package.

Sat Nov 27 09:46:26 EST 1999 Ben Collins <bcollins@debian.org>

  * utils/start-stop-daemon.c: call initgroups() prior to seteuid()

Fri Nov 26 18:36:22 EST 1999 Ben Collins <bcollins@debian.org>

  * dselect/main.cc: fixed three cases where gettext usage was not
    possible die to macros inlined in the strings

Fri Nov 26 18:09:17 EST 1999 Ben Collins <bcollins@debian.org>

  * configure.in: generate utils/Makefile
  * utils/configure.in: removed so top level configure will take over this
    subdir

Fri Nov 26 02:21:56 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix .so-entries for script manpages

Thu Nov 25 23:59:24 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct location of documentation in debian/dpkg-doc.doc-base

Thu Nov 25 04:55:18 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Correct name of source tarball in debian/rules

Thu Nov 25 03:45:23 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Merge the new buildsystem from the wta_build branch. If you want
    the old buildsystem check the last-of-automake tag
