@@ -1,3 +1,8 @@
+Mon Dec  6 01:37:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Correct uid/gid-changes in start-stop-daemon, patch from
+    Topi Miettinen <Topi.Miettinen@nic.fi>
+
 Sun Dec  5 18:09:36 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add manpages from Josip Rodin <joy@cibalia.gkvk.hr> for
